syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "common_enums.proto";
import "object_id.proto";
import "variable.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";
option csharp_namespace = "LittleHorse.Common.Proto";

message UserTaskDef {
  string name = 1;
  int32 version = 2;
  optional string description = 3;
  repeated UserTaskField fields = 4;
  google.protobuf.Timestamp created_at = 5;
}

message UserTaskField {
  string name = 1;
  VariableType type = 2;
  optional string description = 3;
  string display_name = 4;
  bool required = 5;
  // Later versions will allow stuff such as:
  // 1. Validation (eg. email address, integer between 1-10, etc)
  // 2. Nested object structures
  // 3. Multi-Page forms (survey-js style)
  // 4. Conditional rendering of forms based on input (surveyjs style)
  // 5. Default values and optional fields
}

message UserTaskRun {
  UserTaskRunId id = 1;
  UserTaskDefId user_task_def_id = 2;

  optional string user_group = 3;
  optional string user_id = 4;

  map<string, VariableValue> results = 6;
  UserTaskRunStatus status = 7;
  repeated UserTaskEvent events = 8;
  optional string notes = 9;
  google.protobuf.Timestamp scheduled_time = 10;

  // If we ever allow ad-hoc User Tasks, this will move to an optional
  // field, or a `oneof user_task_source` field. However, note that such
  // a change would be fine from the API Compatibility perspective.
  NodeRunId node_run_id = 11;
}

message AssignUserTaskRunRequest {
  UserTaskRunId user_task_run_id = 1;

  bool override_claim = 2;

  optional string user_group = 3;
  optional string user_id = 4;
}

message CompleteUserTaskRunRequest {
  UserTaskRunId user_task_run_id = 1;

  map<string, VariableValue> results = 2;
  string user_id = 3;
}

message CancelUserTaskRunRequest {
  UserTaskRunId user_task_run_id = 1;
}

message UserTaskTriggerReference {
  NodeRunId node_run_id = 1;
  int32 user_task_event_number = 2;

  optional string user_id = 3;
  optional string user_group = 4;
}

enum UserTaskRunStatus {
  UNASSIGNED = 0;
  ASSIGNED = 1;
  DONE = 3;
  CANCELLED = 4;
}

message UserTaskEvent {
  google.protobuf.Timestamp time = 1;

  message UTECancelled {
  }

  message UTETaskExecuted {
    TaskRunId task_run = 1;
  }

  message UTEAssigned {
    optional string old_user_id = 1;
    optional string old_user_group = 2;

    optional string new_user_id = 3;
    optional string new_user_group = 4;
  }

  oneof event {
    UTETaskExecuted task_executed = 2;
    UTEAssigned assigned = 3;
    UTECancelled cancelled = 4;
    // TODO: Add "save user task" and "complete user task" to the
    // audit log
  }
}
